# mcp_chatbot

./: Dockerfile  README.md
mcp_server_hr_archive/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mcp_server_hr_archive/Resources/: dev.yaml  tools.yaml
mcp_server_hr_archive/src/: __init__.py  app_context.py  logger.py  server.py
mcp_server_hr_archive/src/clients/: archive_backend_client.py
mcp_server_hr_archive/src/common_utils/: constants.py  exceptions.py
mcp_server_hr_archive/src/config/: settings.py
mcp_server_hr_archive/src/mcp_server_hr_archive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_server_hr_archive/src/rag/embeddings/: bge_m3_embedder.py
mcp_server_hr_archive/src/rag/reranker/: cross_encoder.py
mcp_server_hr_archive/src/rag/retrieval/: hybrid_search.py
mcp_server_hr_archive/src/rag/vectorstore/: qdrant_client.py
mcp_server_hr_archive/src/repositories/: archive_repository.py  staff_profile_repository.py
mcp_server_hr_archive/src/scheduler/: sync_staff_profiles.py
mcp_server_hr_archive/src/schemas/: archive.py  staff_profile.py
mcp_server_hr_archive/src/services/: archive_service.py  file_service.py  staff_profile_service.py
mcp_server_hr_archive/src/tools/: loader.py  manager.py  registry.py
mcp_server_hr_archive/src/tools/definitions/: get_archive_detail.py  get_archive_file.py  search_archive.py  search_staff_profile.py
mcp_server_hr_archive/tests/integration/: test_client.py
mcp_server_hr_archive/tests/unit/: test_archive_service.py
rag/: __init__.py  (+3 more)
(+101 files in other folders)
