[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_server_hr_archive"
version = "0.1.0"
description = "MCP Server for HR Archive"
requires-python = ">=3.12"

dependencies = [
  "mcp>=1.28,<2",
  "httpx[http2]>=0.24",
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0",
  "qdrant-client>=1.8",
  "FlagEmbedding>=1.2",
  "apscheduler>=3.10",
  "PyYAML>=6.0",
]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]